--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ button:hover{
 }
 
 .handle{
-    height: 100px;
+    height: 10px;
     width: 80px;
     background-color: var(--dark-lighten);
     position: absolute;
@@ -123,6 +123,20 @@ button:hover{
     box-shadow: inset -10px -10px 12px rgba(255,255,255,0.3), inset -10px 12px rgba(255,255,255,0.3);
     background: linear-gradient(-45deg, #430101 0%, #fa1e01 60%, #ff0000 80%, #ffffff 100%);
 }
+
+.balloon.green{
+    filter: hue-rotate(130deg);
+}
+.balloon.blue{
+    filter: hue-rotate(225deg);
+}
+.balloon.purple{
+    filter: hue-rotate(225deg);
+}
+.balloon.pink{
+    filter: hue-rotate(325deg);
+}
+
 
 @keyframes balloon-float{
     0%,100% {
